add lang pages fr and es

--- a/index.html
+++ b/index.html
@@ -344,6 +344,8 @@
 
       <div class="div-language">Language: <span class="span-active-lang">ru</span>
         <a href="./pages/en/en.html">en</a>
+        <a href="./pages/fr/fr.html">fr</a>
+        <a href="./pages/es/es.html">es</a>
       </div>
 
       <div class="footer-date">Copyright © 2023</div>
