--- a/pages/en/en.html
+++ b/pages/en/en.html
@@ -12,8 +12,8 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KANTELE PSALTERY KRAVIK-LYRE GUSLI KOKLE LYRE KANNEL KANKLES</title>
-    <link rel="stylesheet" type="text/css" href="./en.css" />
+    <title>PSALTERY KRAVIK-LYRE KANTELE GUSLI KOKLE LYRE KANNEL KANKLES</title>
+    <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
     <meta name="yandex-verification" content="4ff80869fd518da7" />
     <meta
@@ -84,7 +84,6 @@
   </head>
 
   <body>
-
     <main>
       <p class="content">
         Greetings! My name is Eugene, I am from Belarus and I am engaged in the
@@ -98,19 +97,11 @@
         individually. Write to me and we will discuss everything.
       </p>
       <div class="div-gusli">
-        <img class="gusli-img" src="../../images/myslides/20.jpg" alt="psaltery-image" />
         <p class="text-gusli-vnal">
           I can make you a psaltery. Below are the instruments in stock:
         </p>
         <div class="video-block">
           <h2 class="video-title">Psaltery listening, psaltery sound</h2>
-          <video
-            controls
-            preload="metadata"
-            controlsList="nodownload  nofullscreen "
-          >
-            <source src="../../video/gusli.mp4" type="video/mp4" />
-          </video>
         </div>
         <p class="text-gusli">
           Psalteries have different names in different countries such as KANTELE
@@ -161,61 +152,7 @@
       </div>
     </main>
 
-    <footer>
-      <div class="footer-block1">
-        <div id="contacts">
-          <h2 id="contactsjump">Contacts:</h2>
-
-          <h3>
-            <a class="center" href="mailto:evgen652@mail.ru">
-              <img
-                class="contacts-icon-img"
-                src="../../images/email1.png"
-                alt="email"
-              />
-              &nbsp; evgen652@mail.ru
-            </a>
-          </h3>
-
-          <h3>
-            <a
-              class="center"
-              href="https://telegram.me/Oxonomy2"
-              target="_blank"
-            >
-              <img
-                class="contacts-icon-img"
-                src="../../images/telegram.png"
-                alt="telegram"
-              />
-              &nbsp; Telegram
-            </a>
-          </h3>
-
-          <h3>
-            <a
-              class="center"
-              href="https://www.instagram.com/evgenii_gusli/"
-              target="_blank"
-            >
-              <img
-                class="contacts-icon-img"
-                src="../../images/Instagram.png"
-                alt="Instagram"
-              />
-              &nbsp; Instagram
-            </a>
-          </h3>
-        </div>
-      </div>
-
-      <div class="div-language">
-        Language: <span class="span-active-lang">en</span>
-        <a href="../../index.html">ru</a>
-      </div>
-
-      <div class="footer-date">Copyright © 2023</div>
-    </footer>
+    <footer id="footer"></footer>
 
     <link href="../../viewer/viewer.min.css" rel="stylesheet" />
     <script defer src="../lang.js"></script>
