--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -207,6 +207,8 @@
 
       <div class="div-language">Language: <span class="span-active-lang">ru</span>
         <a href="../en/en.html">en</a>
+        <a href="../fr/fr.html">fr</a>
+        <a href="../es/es.html">es</a>
       </div>
 
       <div class="footer-date">Copyright © 2023</div>
