add lang pages de,et,fi,pl,sv

--- a/index.html
+++ b/index.html
@@ -346,6 +346,11 @@
         <a href="./pages/en/en.html">en</a>
         <a href="./pages/fr/fr.html">fr</a>
         <a href="./pages/es/es.html">es</a>
+        <a href="./pages/de/de.html">de</a>
+        <a href="./pages/pl/pl.html">pl</a>
+        <a href="./pages/fi/fi.html">fi</a>
+        <a href="./pages/sv/sv.html">sv</a>
+        <a href="./pages/et/et.html">et</a>
       </div>
 
       <div class="footer-date">Copyright © 2023</div>
