--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -209,6 +209,11 @@
         <a href="../en/en.html">en</a>
         <a href="../fr/fr.html">fr</a>
         <a href="../es/es.html">es</a>
+        <a href="../de/de.html">de</a>
+        <a href="../pl/pl.html">pl</a>
+        <a href="../fi/fi.html">fi</a>
+        <a href="../sv/sv.html">sv</a>
+        <a href="../et/et.html">et</a>
       </div>
 
       <div class="footer-date">Copyright © 2023</div>
