add lang pages da,no

--- a/index.html
+++ b/index.html
@@ -351,6 +351,8 @@
         <a href="./pages/fi/fi.html">fi</a>
         <a href="./pages/sv/sv.html">sv</a>
         <a href="./pages/et/et.html">et</a>
+        <a href="./pages/no/no.html">no</a>
+        <a href="./pages/da/da.html">da</a>
       </div>
 
       <div class="footer-date">Copyright © 2023</div>
