--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -214,6 +214,8 @@
         <a href="../fi/fi.html">fi</a>
         <a href="../sv/sv.html">sv</a>
         <a href="../et/et.html">et</a>
+        <a href="../no/no.html">no</a>
+        <a href="../da/da.html">da</a>
       </div>
 
       <div class="footer-date">Copyright © 2023</div>
