--- a/pages/en/en.html
+++ b/pages/en/en.html
@@ -12,7 +12,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PSALTERY KRAVIK-LYRE KANTELE GUSLI KOKLE LYRE KANNEL KANKLES</title>
+    <title>PSALTERY, KRAVIK-LYRE, KANTELE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES, ancient musical instruments</title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
     <meta name="yandex-verification" content="4ff80869fd518da7" />
