add lang pages lt,lv,ro

--- a/index.html
+++ b/index.html
@@ -353,6 +353,10 @@
         <a href="./pages/et/et.html">et</a>
         <a href="./pages/no/no.html">no</a>
         <a href="./pages/da/da.html">da</a>
+        <a href="./pages/lv/lv.html">lv</a>
+        <a href="./pages/lt/lt.html">lt</a>
+        <a href="./pages/cs/cs.html">cs</a>
+        <a href="./pages/ro/ro.html">ro</a>
       </div>
 
       <div class="footer-date">Copyright © 2023</div>
