--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -216,6 +216,10 @@
         <a href="../et/et.html">et</a>
         <a href="../no/no.html">no</a>
         <a href="../da/da.html">da</a>
+        <a href="../lv/lv.html">lv</a>
+        <a href="../lt/lt.html">lt</a>
+        <a href="../cs/cs.html">cs</a>
+        <a href="../ro/ro.html">ro</a>
       </div>
 
       <div class="footer-date">Copyright © 2023</div>
