add lang pages bg,hu,it

--- a/index.html
+++ b/index.html
@@ -357,6 +357,9 @@
         <a href="./pages/lt/lt.html">lt</a>
         <a href="./pages/cs/cs.html">cs</a>
         <a href="./pages/ro/ro.html">ro</a>
+        <a href="./pages/hu/hu.html">hu</a>
+        <a href="./pages/bg/bg.html">bg</a>
+        <a href="./pages/it/it.html">it</a>
       </div>
 
       <div class="footer-date">Copyright © 2023</div>
