--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -220,6 +220,9 @@
         <a href="../lt/lt.html">lt</a>
         <a href="../cs/cs.html">cs</a>
         <a href="../ro/ro.html">ro</a>
+        <a href="../hu/hu.html">hu</a>
+        <a href="../bg/bg.html">bg</a>
+        <a href="../it/it.html">it</a>
       </div>
 
       <div class="footer-date">Copyright © 2023</div>
