add lang pages zh,pt,nl

--- a/index.html
+++ b/index.html
@@ -360,6 +360,12 @@
         <a href="./pages/hu/hu.html">hu</a>
         <a href="./pages/bg/bg.html">bg</a>
         <a href="./pages/it/it.html">it</a>
+        <a href="./pages/sr/sr.html">sr</a>
+        <a href="./pages/sl/sl.html">sl</a>
+        <a href="./pages/hr/hr.html">hr</a>
+        <a href="./pages/zh/zh.html">zh</a>
+        <a href="./pages/pt/pt.html">pt</a>
+        <a href="./pages/nl/nl.html">nl</a>
       </div>
 
       <div class="footer-date">Copyright © 2023</div>
