--- a/pages/cs/cs.html
+++ b/pages/cs/cs.html
@@ -108,8 +108,8 @@
           <h2 class="video-title">Poslech žaltáře, zvuk žaltáře</h2>
         </div>
         <p class="text-gusli">
-          V různých zemích mají žaltáře různé názvy, například KANTELE PSALTERY
-          KOKLE KANNEL KANKLES GUSLI. Jedná se o hudební strunný nástroj
+          V různých zemích mají žaltáře různé názvy, například KANTELE, PSALTERY,
+          KOKLE, KANNEL, KANKLES, GUSLI. Jedná se o hudební strunný nástroj
           starověkého původu, který byl od pradávna proslulý svým okouzlujícím
           zvukem. Psalterium je považováno za nejstarší typ a předchůdce
           ostatních strunných nástrojů. Při hře se nástroj obvykle drží v klíně,
