--- a/pages/da/da.html
+++ b/pages/da/da.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Fremstilling og salg af gamle musikinstrumenter, her kan du købe håndlavede instrumenter til en overkommelig pris. KANTELE PSALTERY KRAVIK-LYRE GUSLI KOKLE LYRE KANNEL KANKLES"
+      content="Fremstilling og salg af gamle musikinstrumenter, her kan du købe håndlavede instrumenter til en overkommelig pris. KANTELE, PSALTERY, KRAVIK-LYRE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES"
     />
     <meta
       name="keywords"
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      gamle musikinstrumenter PSALTERY, KRAVIK-LYRE, KANTELE, GUSLI, KOKLE,
+      Gamle musikinstrumenter. PSALTERY, KRAVIK-LYRE, KANTELE, GUSLI, KOKLE,
       LYRE, KANNEL, KANKLES
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
@@ -108,8 +108,8 @@
           <h2 class="video-title">Psaltery lytning, psaltery lyd</h2>
         </div>
         <p class="text-gusli">
-          Psalterier har forskellige navne i forskellige lande, f.eks. KANTELE
-          PSALTERY KOKLE KANNEL KANKLES GUSLI. Det er et musikalsk
+          Psalterier har forskellige navne i forskellige lande, f.eks. KANTELE,
+          PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Det er et musikalsk
           strengeinstrument af gammel oprindelse, som fra gammel tid har været
           berømt for sin fortryllende lyd. Psalteriet anses for at være den
           ældste type og stamfader til andre strengeinstrumenter. Når man
