--- a/pages/de/de.html
+++ b/pages/de/de.html
@@ -13,8 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      altes Musikinstrument Psalterium, Leier, Kravik Leier, Psalter, Kantele
-      PSALTERY KRAVIK-LYRE GUSLI KOKLE LYRE KANNEL KANKLES
+      Altes Musikinstrument. Psalterium, Leier, Kravik Leier, Psalter, Kantele,
+      PSALTERY, KRAVIK-LYRE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
@@ -111,7 +111,7 @@
         </div>
         <p class="text-gusli">
           Psalterien haben in den verschiedenen Ländern unterschiedliche Namen
-          wie KANTELE PSALTERY KOKLE KANNEL KANKLES GUSLI. Es handelt sich um
+          wie KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Es handelt sich um
           ein Saiteninstrument antiken Ursprungs, das schon in der Antike für
           seinen bezaubernden Klang bekannt war. Das Psalterium gilt als
           ältester Typus und Vorläufer der anderen Saiteninstrumente. Beim
