--- a/pages/en/en.html
+++ b/pages/en/en.html
@@ -104,8 +104,8 @@
           <h2 class="video-title">Psaltery listening, psaltery sound</h2>
         </div>
         <p class="text-gusli">
-          Psalteries have different names in different countries such as KANTELE
-          PSALTERY KOKLE KANNEL KANKLES GUSLI. It is a musical string instrument
+          Psalteries have different names in different countries such as KANTELE,
+          PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. It is a musical string instrument
           of ancient origin, which from ancient times was famous for its
           enchanting sound. The psaltery is considered the oldest type and
           progenitor of other stringed instruments. When playing, the instrument
