--- a/pages/es/es.html
+++ b/pages/es/es.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Fabricación y venta de instrumentos musicales antiguos, puede comprarnos instrumentos hechos a mano a un precio asequible.SALTERÍA Salterio KRAVIK-LIRA KANTELE GUSLI KOKLE LIRA KANNEL KANKLES"
+      content="Fabricación y venta de instrumentos musicales antiguos, puede comprarnos instrumentos hechos a mano a un precio asequible.SALTERÍA, Salterio, KRAVIK-LIRA, KANTELE, GUSLI, KOKLE, LIRA, KANNEL, KANKLES"
     />
     <meta
       name="keywords"
@@ -13,8 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      SALTERÍA Salterio KRAVIK-LIRA LIRA antiguo instrumento musical PSALTERY
-      KRAVIK-LYRE KANTELE GUSLI KOKLE LYRE KANNEL KANKLES
+      SALTERÍA, Salterio, KRAVIK-LIRA, LIRA. Antiguo instrumento musical. PSALTERY,
+      KRAVIK-LYRE, KANTELE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
@@ -110,7 +110,7 @@
         </div>
         <p class="text-gusli">
           Los salterios reciben diferentes nombres en los distintos países, como
-          KANTELE PSALTERY KOKLE KANNEL KANKLES GUSLI. Es un instrumento musical
+          KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Es un instrumento musical
           de cuerda de origen antiguo, que desde la antigüedad fue famoso por su
           encantador sonido. El salterio se considera el tipo más antiguo y
           progenitor de otros instrumentos de cuerda. Cuando se toca, el
