--- a/pages/et/et.html
+++ b/pages/et/et.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       iidsed muusikainstrumendid. Psalteri, KANNEL, kantele, lüüra, kravik
-      lüüra, , psalter, kankles, kokle
+      lüüra, gusli, psalter, kankles, kokle
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
@@ -108,8 +108,8 @@
           <h2 class="video-title">Psalteri kuulamine, psalteri heli</h2>
         </div>
         <p class="text-gusli">
-          Psalteritel (KANNEL) on eri riikides erinevad nimed, näiteks KANTELE
-          PSALTERI KOKLE KANNEL KANKLES GUSLI. See on iidse päritoluga keelpill,
+          Psalteritel (KANNEL) on eri riikides erinevad nimed, näiteks KANTELE,
+          PSALTERI, KOKLE, KANNEL, KANKLES, GUSLI. See on iidse päritoluga keelpill,
           mis on juba ammustest aegadest alates kuulus oma lummava heli poolest.
           Psalterit(Kannel) peetakse vanimaks tüübiks ja teiste keelpillide
           eellaseks. Pilli mängides on pilli tavaliselt süles, pilli pillide
