--- a/pages/fi/fi.html
+++ b/pages/fi/fi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Teemme ja myymme vanhoja soittimia, meiltä voit ostaa käsintehtyjä soittimia edulliseen hintaan. Psalttari, liira, kravik liira, KANTELE, PSALTERY, KRAVIK-LYRE, GUSLI, KOKLE, LYRE KANNEL, KANKLES"
+      content="Teemme ja myymme vanhoja soittimia, meiltä voit ostaa käsintehtyjä soittimia edulliseen hintaan. Psalttari, liira, kravik liira, KANTELE, PSALTERY, KRAVIK-LYRE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES"
     />
     <meta
       name="keywords"
@@ -107,8 +107,8 @@
           <h2 class="video-title">Psalttarin kuuntelu, psalttarin ääni</h2>
         </div>
         <p class="text-gusli">
-          Psalttareilla on eri maissa eri nimiä, kuten KANTELE PSALTERY KOKLE
-          KANNEL KANKLES GUSLI. Se on muinaisperäinen jousisoitin, joka on ollut
+          Psalttareilla on eri maissa eri nimiä, kuten KANTELE, PSALTERY, KOKLE,
+          KANNEL, KANKLES, GUSLI. Se on muinaisperäinen jousisoitin, joka on ollut
           muinaisista ajoista lähtien kuuluisa lumoavasta äänestään. Psalttaria
           pidetään vanhimpana tyyppinä ja muiden jousisoittimien kantaisänä.
           Soitettaessa soitinta pidetään yleensä sylissä, ja ääniä puretaan
