--- a/pages/fr/fr.html
+++ b/pages/fr/fr.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Fabrication et vente d'instruments de musique anciens. Ici, vous pouvez acheter des instruments fabriqués à la main à un prix abordable. PSALTÉRION KRAVIK-LYRE KANTELE GUSLI KOKLE LYRE KANNEL KANKLES"
+      content="Fabrication et vente d'instruments de musique anciens. Ici, vous pouvez acheter des instruments fabriqués à la main à un prix abordable. PSALTÉRION, KRAVIK-LYRE, KANTELE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES"
     />
     <meta
       name="keywords"
@@ -13,8 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      instrument de musique ancien PSALTÉRION KRAVIK-LYRE lyre musicale KANTELE
-      PSALTERY GUSLI KOKLE LYRE KANNEL KANKLES
+      Instrument de musique ancien. PSALTÉRION, KRAVIK-LYRE, lyre musicale, KANTELE
+      PSALTERY, GUSLI, KOKLE, LYRE, KANNEL, KANKLES
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
@@ -110,7 +110,7 @@
         </div>
         <p class="text-gusli">
           Les psaltérions portent des noms différents selon les pays, tels que
-          KANTELE PSALTERY KOKLE KANNEL KANKLES GUSLI. Il s'agit d'un instrument
+          KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Il s'agit d'un instrument
           de musique à cordes d'origine ancienne, célèbre depuis l'Antiquité
           pour sa sonorité enchanteresse. Le psaltérion est considéré comme le
           type le plus ancien et le précurseur des autres instruments à cordes.
