--- a/pages/hu/hu.html
+++ b/pages/hu/hu.html
@@ -112,7 +112,7 @@
         </div>
         <p class="text-gusli">
           A zsoltároknak(psaltery) különböző neveik vannak a különböző
-          országokban, például KANTELE PSALTERY KOKLE KANNEL KANKLES GUSLI. Ez
+          országokban, például KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Ez
           egy ősi eredetű zenei vonós hangszer, amely az ősi időkből híres volt
           varázslatos hangjáról. A zsoltárt(psaltery) más húros hangszerek
           legrégebbi típusának és elődjének tekintik. Játék közben a hangszer
