--- a/pages/it/it.html
+++ b/pages/it/it.html
@@ -108,8 +108,8 @@
           <h2 class="video-title">Ascolto salterio, suono salterio</h2>
         </div>
         <p class="text-gusli">
-          Psalteries hanno nomi diversi in diversi paesi come KANTELE PSALTERY
-          KOKLE KANNEL KANKLES GUSLI. È uno strumento musicale a corde di antica
+          Psalteries hanno nomi diversi in diversi paesi come KANTELE, PSALTERY,
+          KOKLE, KANNEL, KANKLES, GUSLI. È uno strumento musicale a corde di antica
           origine, che fin dall'antichità era famoso per il suo suono
           incantevole. Il salterio è considerato il più antico tipo e
           progenitore di altri strumenti a corda. Durante la riproduzione, lo
