--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -223,6 +223,12 @@
         <a href="../hu/hu.html">hu</a>
         <a href="../bg/bg.html">bg</a>
         <a href="../it/it.html">it</a>
+        <a href="../sr/sr.html">sr</a>
+        <a href="../sl/sl.html">sl</a>
+        <a href="../hr/hr.html">hr</a>
+        <a href="../zh/zh.html">zh</a>
+        <a href="../pt/pt.html">pt</a>
+        <a href="../nl/nl.html">nl</a>
       </div>
 
       <div class="footer-date">Copyright © 2023</div>
