--- a/pages/lt/lt.html
+++ b/pages/lt/lt.html
@@ -111,7 +111,7 @@
         </div>
         <p class="text-gusli">
           Įvairiose šalyse psalterijos(Kanklės) turi skirtingus pavadinimus,
-          pavyzdžiui, KANTELE PSALTERY KOKLE KANNEL KANKLES GUSLI. Tai senovinės
+          pavyzdžiui KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Tai senovinės
           kilmės muzikinis styginis instrumentas, nuo seno garsėjęs kerinčiu
           skambesiu. Psalterija(Kanklės) laikoma seniausiu kitų styginių
           instrumentų tipu ir pirmtaku. Grojant instrumentas dažniausiai būna
