--- a/pages/lv/lv.html
+++ b/pages/lv/lv.html
@@ -110,8 +110,8 @@
           </h2>
         </div>
         <p class="text-gusli">
-          Psalterijām dažādās valstīs ir dažādi nosaukumi, piemēram, KANTELE
-          PSALTERY KOKLE KANNEL KANKLES GUSLI. Tas ir senas izcelsmes stīgu
+          Psalterijām dažādās valstīs ir dažādi nosaukumi, piemēram KANTELE,
+          PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Tas ir senas izcelsmes stīgu
           mūzikas instruments, kas jau no seniem laikiem bija slavens ar savu
           burvīgo skanējumu. Psalteriju uzskata par senāko instrumentu veidu un
           citu stīgu instrumentu priekšteci. Spēlējot instruments parasti ir
