--- a/pages/no/no.html
+++ b/pages/no/no.html
@@ -111,7 +111,7 @@
         </div>
         <p class="text-gusli">
           Psalterier(kantele) har forskjellige navn i forskjellige land, for
-          eksempel KANTELE PSALTERY KOKLE KANNEL KANKLES GUSLI. Det er et
+          eksempel KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Det er et
           musikalsk strengeinstrument av eldgammel opprinnelse, som fra eldgamle
           tider var kjent for sin fortryllende lyd. Psalteriet(kantele) regnes
           som den eldste typen og stamfar til andre strengeinstrumenter. Når du
