--- a/pages/pl/pl.html
+++ b/pages/pl/pl.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Wykonywanie i sprzedaż starożytnych instrumentów muzycznych, u nas kupisz ręcznie robione instrumenty w przystępnej cenie. Psałterz, lira, lira kravik, KANTELE PSALTERY KOKLE KANNEL KANKLES GUSLI"
+      content="Wykonywanie i sprzedaż starożytnych instrumentów muzycznych, u nas kupisz ręcznie robione instrumenty w przystępnej cenie. Psałterz, lira, lira kravik, KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI"
     />
     <meta
       name="keywords"
@@ -13,8 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      zabytkowe instrumenty muzyczne Psałterz, lira, lira kravik PSALTERY
-      KRAVIK-LYRE KANTELE GUSLI KOKLE LYRE KANNEL KANKLES
+      zabytkowe instrumenty muzyczne Psałterz, lira, lira kravik, PSALTERY,
+      KRAVIK-LYRE, KANTELE, GUSLI KOKLE, LYRE, KANNEL, KANKLES
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
@@ -108,8 +108,8 @@
           <h2 class="video-title">Słuchanie psałterii, dźwięk psałterii</h2>
         </div>
         <p class="text-gusli">
-          Psałterze mają różne nazwy w różnych krajach np. KANTELE PSALTERY
-          KOKLE KANNEL KANKLES GUSLI. Jest to muzyczny instrument strunowy o
+          Psałterze mają różne nazwy w różnych krajach np. KANTELE, PSALTERY,
+          KOKLE, KANNEL, KANKLES, GUSLI. Jest to muzyczny instrument strunowy o
           starożytnym pochodzeniu, który od czasów starożytnych słynął z
           urzekającego brzmienia. Psałterz uważany jest za najstarszy typ i
           protoplastę innych instrumentów strunowych. Podczas gry instrument
