--- a/pages/ro/ro.html
+++ b/pages/ro/ro.html
@@ -108,8 +108,8 @@
           <h2 class="video-title">Ascultare psaltire, sunet de psaltire</h2>
         </div>
         <p class="text-gusli">
-          Psaltirile au nume diferite în diferite țări, cum ar fi KANTELE
-          PSALTERY KOKLE KANNEL KANKLES GUSLI. Este un instrument muzical cu
+          Psaltirile au nume diferite în diferite țări, cum ar fi KANTELE,
+          PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Este un instrument muzical cu
           coarde de origine străveche, care din cele mai vechi timpuri era
           renumit pentru sunetul său încântător. Psaltirea este considerată cel
           mai vechi tip și progenitor al altor instrumente cu coarde. Când se
