--- a/pages/sv/sv.html
+++ b/pages/sv/sv.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Tillverkning och försäljning av antika musikinstrument, här kan du köpa handgjorda instrument till ett överkomligt pris. KANTELE PSALTERI KRAVIK-LYRE GUSLI KOKLE LYRE KANNEL KANKLES"
+      content="Tillverkning och försäljning av antika musikinstrument, här kan du köpa handgjorda instrument till ett överkomligt pris. KANTELE, PSALTERI, KRAVIK-LYRE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES"
     />
     <meta
       name="keywords"
@@ -108,8 +108,8 @@
           <h2 class="video-title">Psaltery listening, psaltery sound</h2>
         </div>
         <p class="text-gusli">
-          Psaltare har olika namn i olika länder, t.ex. KANTELE PSALTERY KOKLE
-          KANNEL KANKLES GUSLI. Det är ett musikaliskt stränginstrument av
+          Psaltare har olika namn i olika länder, t.ex. KANTELE, PSALTERY, KOKLE,
+          KANNEL, KANKLES, GUSLI. Det är ett musikaliskt stränginstrument av
           gammalt ursprung, som sedan urminnes tider var känt för sitt
           förtrollande ljud. Psalteriet anses vara den äldsta typen och
           stamfadern till andra stränginstrument. När man spelar ligger
