--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Гусли купить, недорого, гусли из Беларуси, гусли инструмент, кокле, каннель, кантеле, канклес, гусли
-      музыкальный, старинный струнный инструмент, гусли музыка, гусли слушать,
-      играющие гусли, народные гусли.
+      Гусли купить, недорого, гусли из Беларуси, гусли инструмент, кокле,
+      каннель, кантеле, канклес, гусли музыкальный, старинный струнный
+      инструмент, гусли музыка, гусли слушать, играющие гусли, народные гусли.
     </title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
@@ -140,20 +140,17 @@
 
       <h1 id="textguslivnal">Гусли в наличии:</h1>
       <div id="available">
-  
-          <ul class="images images1">
-            <li class="visible">
-              <img src="images/product/1/1.jpg" alt="Гусли-изображение-1" />
-            </li>
-            <li>
-              <h2 class="textproduct">
-                Гусли № 1, 12 струн,<br />цена: 285 BYN
-              </h2>
-            </li>
-            <div class="hidden-photos">
-              <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
-            </div>
-          </ul>
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/1/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+          <li>
+            <h2 class="textproduct">Гусли № 1, 12 струн,<br />цена: 285 BYN</h2>
+          </li>
+          <div class="hidden-photos">
+            <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
+          </div>
+        </ul>
 
         <ul class="images images1">
           <li class="visible">
@@ -161,9 +158,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">
-              Гусли № 2, 12 струн,<br />цена: 285 BYN
-            </h2>
+            <h2 class="textproduct">Гусли № 2, 12 струн,<br />цена: 285 BYN</h2>
           </li>
           <div class="hidden-photos">
             <img src="images/product/2/2.jpg" alt="Гусли-изображение-2" />
@@ -177,9 +172,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">
-              Гусли № 3, 11 струн,<br />цена: 285 BYN
-            </h2>
+            <h2 class="textproduct">Гусли № 3, 11 струн,<br />цена: 285 BYN</h2>
           </li>
           <div class="hidden-photos">
             <img src="images/product/3/2.jpg" alt="Гусли-изображение-2" />
@@ -193,9 +186,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">
-              Гусли № 4, 12 струн,<br />цена: 285 BYN
-            </h2>
+            <h2 class="textproduct">Гусли № 4, 12 струн,<br />цена: 285 BYN</h2>
           </li>
 
           <div class="hidden-photos">
@@ -210,9 +201,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">
-              Гусли № 5, 11 струн,<br />цена: 285 BYN
-            </h2>
+            <h2 class="textproduct">Гусли № 5, 11 струн,<br />цена: 285 BYN</h2>
           </li>
 
           <div class="hidden-photos">
@@ -228,9 +217,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">
-              Гусли № 6, 11 струн,<br />цена: 285 BYN
-            </h2>
+            <h2 class="textproduct">Гусли № 6, 11 струн,<br />цена: 285 BYN</h2>
           </li>
 
           <div class="hidden-photos">
@@ -307,8 +294,23 @@
                 src="images/tel.png"
                 alt="телефон"
               />
-              &nbsp; +375(29)777-14-53</a
-            >
+              &nbsp; +375 29 777-14-53</a
+            >&nbsp;&nbsp;
+            <img
+              class="contacts-icon-img"
+              src="images/viber.png"
+              alt="viber"
+            />&nbsp;
+            <img
+              class="contacts-icon-img"
+              src="images/whatsapp.png"
+              alt="whatsapp"
+            />&nbsp;
+            <img
+              class="contacts-icon-img"
+              src="images/telegram.png"
+              alt="telegram"
+            />
           </h3>
         </div>
 
@@ -342,7 +344,8 @@
         </div>
       </div>
 
-      <div class="div-language">Language: <span class="span-active-lang">ru</span>
+      <div class="div-language">
+        Language: <span class="span-active-lang">ru</span>
         <a href="./pages/en/en.html">en</a>
         <a href="./pages/fr/fr.html">fr</a>
         <a href="./pages/es/es.html">es</a>
