add title img kontakts

--- a/index.html
+++ b/index.html
@@ -300,16 +300,19 @@
               class="contacts-icon-img"
               src="images/viber.png"
               alt="viber"
+              title="Viber"
             />&nbsp;
             <img
               class="contacts-icon-img"
               src="images/whatsapp.png"
               alt="whatsapp"
+              title="WhatsApp"
             />&nbsp;
             <img
               class="contacts-icon-img"
               src="images/telegram.png"
               alt="telegram"
+              title="Telegram"
             />
           </h3>
         </div>
