add new product

--- a/index.html
+++ b/index.html
@@ -140,16 +140,14 @@
 
       <h1 id="textguslivnal">Гусли в наличии:</h1>
       <div id="available">
+        
         <ul class="images images1">
           <li class="visible">
             <img src="images/product/1/1.jpg" alt="Гусли-изображение-1" />
           </li>
           <li>
-            <h2 class="textproduct">Гусли № 1, 12 струн,<br />цена: 285 BYN</h2>
+            <h2 class="textproduct">Гусли № 1, 11 струн,<br />цена: 285 BYN</h2>
           </li>
-          <div class="hidden-photos">
-            <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
-          </div>
         </ul>
 
         <ul class="images images1">
@@ -205,9 +203,9 @@
           </li>
 
           <div class="hidden-photos">
-            <img src="images/product/5/2.jpg" alt="Гусли-изображение-2" />
+            <!-- <img src="images/product/5/2.jpg" alt="Гусли-изображение-2" /> -->
             <img src="images/product/5/3.jpg" alt="Гусли-изображение-3" />
-            <img src="images/product/5/4.jpg" alt="Гусли-изображение-4" />
+            <!-- <img src="images/product/5/4.jpg" alt="Гусли-изображение-4" /> -->
           </div>
         </ul>
 
@@ -227,6 +225,7 @@
             <img src="images/product/6/5.jpg" alt="Гусли-изображение-5" />
           </div>
         </ul>
+
       </div>
 
       <div class="video-block">
