--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           <h3>
             <a
               class="center"
-              href="https://telegram.me/Oxonomy2"
+              href="https://t.me/evgeni652"
               target="_blank"
             >
               <img
