--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
           <li>
             <h2 class="textproduct">Гусли № 1, 11 струн,<br />цена: 285 BYN</h2>
           </li>
+          <div class="hidden-photos">
+            <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/1/3.jpg" alt="Гусли-изображение-3" />
+          </div>
         </ul>
 
         <ul class="images images1">
@@ -184,7 +188,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 4, 12 струн,<br />цена: 285 BYN</h2>
+            <h2 class="textproduct">Гусли № 4, 12 струн,<br />цена: 300 BYN</h2>
           </li>
 
           <div class="hidden-photos">
@@ -199,13 +203,12 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 5, 11 струн,<br />цена: 285 BYN</h2>
+            <h2 class="textproduct">Гусли № 5, 12 струн,<br />цена: 300 BYN</h2>
           </li>
 
           <div class="hidden-photos">
-            <!-- <img src="images/product/5/2.jpg" alt="Гусли-изображение-2" /> -->
+            <img src="images/product/5/2.jpg" alt="Гусли-изображение-2" />
             <img src="images/product/5/3.jpg" alt="Гусли-изображение-3" />
-            <!-- <img src="images/product/5/4.jpg" alt="Гусли-изображение-4" /> -->
           </div>
         </ul>
 
@@ -215,7 +218,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 6, 11 струн,<br />цена: 285 BYN</h2>
+            <h2 class="textproduct">Гусли № 6, 11 струн,<br />цена: 300 BYN</h2>
           </li>
 
           <div class="hidden-photos">
