--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Гусли купить, недорого, гусли из Беларуси, гусли инструмент, кокле,
-      каннель, кантеле, канклес, гусли музыкальный, старинный струнный
-      инструмент, гусли музыка, гусли слушать, играющие гусли, народные гусли.
+      Гусли купить, недорого, гусли из Беларуси, гусли инструмент, гусли музыкальный, старинный струнный
+      инструмент, кантеле, гусли музыка, гусли слушать, играющие гусли, народные гусли.
     </title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
