--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
-    <meta name="yandex-verification" content="4ff80869fd518da7" />
+    <meta name="yandex-verification" content="4d26fe2e92726b3a" />
     <meta
       name="google-site-verification"
       content="jnsFx6nk18DhrgKxMlAOeiikxU6iXY-E2Ejbr3YdxCI"
@@ -119,7 +119,7 @@
         приобретения инструмента и вопросам свяжитесь со мной по данным
         <a href="#contactsjump">контактам</a>. Возможна отправка в другие
         страны. Условия доставки и оплаты согласовываются индивидуально.Также
-        изготавливаю <a href="./pages/lira/lira.html">ЛИРЫ</a>
+        изготавливаю <a href="./pages/lira/lira.html">Лиру. Смычковую лиру</a>
       </p>
 
       <!-- Slideshow container -->
@@ -342,6 +342,7 @@
                 <img src="./images/review/9.jpg" alt="Гусли-отзыв-9" />
                 <img src="./images/review/10.jpg" alt="Гусли-отзыв-10" />
                 <img src="./images/review/11.jpg" alt="Гусли-отзыв-11" />
+                <img src="./images/review/12.png" alt="Гусли-отзыв-12" />
               </div>
             </ul>
           </div>
