--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         приобретения инструмента и вопросам свяжитесь со мной по данным
         <a href="#contactsjump">контактам</a>. Возможна отправка в другие
         страны. Условия доставки и оплаты согласовываются индивидуально.Также
-        изготавливаю <a href="./pages/lira/lira.html">Лиру. Смычковую лиру</a>
+        изготавливаю <a href="./pages/lira/lira.html">Лиру</a>
       </p>
 
       <!-- Slideshow container -->
@@ -180,6 +180,21 @@
             <img src="images/product/6/3.jpg" alt="Гусли-изображение-3" />
             <img src="images/product/6/4.jpg" alt="Гусли-изображение-4" />
             <img src="images/product/6/5.jpg" alt="Гусли-изображение-5" />
+          </div>
+        </ul>
+
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/7/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h2 class="textproduct">Гусли № 7, 12 струн,<br />цена: 300 BYN</h2>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/7/2.jpg" alt="Гусли-изображение-2" />
           </div>
         </ul>
 
