--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <main>
       <p class="upcontent">
-        gusli.ga здесь можно ознакомиться с инструментами, какие гусли выбрать
+        egusli.by здесь можно ознакомиться с инструментами, какие гусли выбрать
         себе.
       </p>
 
