fix lang counters

--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -18,6 +18,7 @@
     </title>
     <link rel="stylesheet" type="text/css" href="./lira.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
+    <meta name="msvalidate.01" content="8B7B49C8CDE151A36797D8B736992F10" />
     <meta name="yandex-verification" content="0917a70fd744a783" />
 
     <!-- Yandex.Metrika counter -->
