add counter google

--- a/pages/info/info.html
+++ b/pages/info/info.html
@@ -36,6 +36,16 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/87816363" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9NQ47NKGZP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9NQ47NKGZP');
+</script>
+
   </head>
   <body>
     <header>
