--- a/index.html
+++ b/index.html
@@ -13,43 +13,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Гусли купить, недорого, гусли из Беларуси, гусли инструмент, гусли музыкальный, старинный струнный
-      инструмент, кантеле, гусли музыка, гусли слушать, играющие гусли, народные гусли.
+      Гусли купить, недорого, гусли из Беларуси, гусли инструмент, гусли
+      музыкальный, старинный струнный инструмент, кантеле, гусли музыка, гусли
+      слушать, играющие гусли, народные гусли.
     </title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <meta name="msvalidate.01" content="8B7B49C8CDE151A36797D8B736992F10" />
     <meta name="yandex-verification" content="0917a70fd744a783" />
 
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-  m[i].l=1*new Date();
-  for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-  k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+      (function (m, e, t, r, i, k, a) {
+        m[i] =
+          m[i] ||
+          function () {
+            (m[i].a = m[i].a || []).push(arguments);
+          };
+        m[i].l = 1 * new Date();
+        for (var j = 0; j < document.scripts.length; j++) {
+          if (document.scripts[j].src === r) {
+            return;
+          }
+        }
+        (k = e.createElement(t)),
+          (a = e.getElementsByTagName(t)[0]),
+          (k.async = 1),
+          (k.src = r),
+          a.parentNode.insertBefore(k, a);
+      })(
+        window,
+        document,
+        "script",
+        "https://mc.yandex.ru/metrika/tag.js",
+        "ym"
+      );
 
-  ym(94134743, "init", {
-       clickmap:true,
-       trackLinks:true,
-       accurateTrackBounce:true,
-       webvisor:true,
-       ecommerce:"dataLayer"
-  });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/94134743" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+      ym(94134743, "init", {
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true,
+        webvisor: true,
+        ecommerce: "dataLayer",
+      });
+    </script>
+    <noscript
+      ><div>
+        <img
+          src="https://mc.yandex.ru/watch/94134743"
+          style="position: absolute; left: -9999px"
+          alt=""
+        /></div
+    ></noscript>
+    <!-- /Yandex.Metrika counter -->
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9NQ47NKGZP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-9NQ47NKGZP"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-9NQ47NKGZP');
-</script>
-
+      gtag("config", "G-9NQ47NKGZP");
+    </script>
   </head>
 
   <body>
@@ -105,7 +136,6 @@
 
       <h1 id="textguslivnal">Гусли в наличии:</h1>
       <div id="available">
-        
         <ul class="images images1">
           <li class="visible">
             <img src="images/product/1/1.jpg" alt="Гусли-изображение-1" />
@@ -194,7 +224,6 @@
           </div>
         </ul>
 
-
         <ul class="images images1">
           <li class="visible">
             <img src="images/product/7/1.jpg" alt="Гусли-изображение-1" />
@@ -208,18 +237,18 @@
             <img src="images/product/7/2.jpg" alt="Гусли-изображение-2" />
           </div>
         </ul>
-
       </div>
 
       <div class="video-block">
         <h2 class="video-title">Гусли слушать, звучание гуслей</h2>
-        <video
-          controls
-          preload="metadata"
-          controlsList="nodownload  nofullscreen "
-        >
-          <source src="./video/gusli.mp4" type="video/mp4" />
-        </video>
+        <iframe
+          class="video"
+          src="https://www.youtube.com/embed/7R_rCmHMXrE"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
       </div>
     </main>
 
@@ -240,11 +269,7 @@
           </h3>
 
           <h3>
-            <a
-              class="center"
-              href="https://t.me/evgeni652"
-              target="_blank"
-            >
+            <a class="center" href="https://t.me/evgeni652" target="_blank">
               <img
                 class="contacts-icon-img"
                 src="images/telegram.png"
