--- a/index.html
+++ b/index.html
@@ -180,6 +180,23 @@
           </div>
         </ul>
 
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/4/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h2 class="textproduct">Гусли № 4, 12 струн,<br />цена: 350 BYN</h2>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/4/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/4/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/4/4.jpg" alt="Гусли-изображение-3" />
+          </div>
+        </ul>
+
         <ul class="images images1">
           <li class="visible">
             <img src="images/product/5/1.jpg" alt="Гусли-изображение-1" />
