--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -83,7 +83,7 @@
             </li>
             <li>
               <h2 class="textproduct">
-                Лира Кравик / Kravik Lyre №1, 7 струн,<br />цена: 300 BYN
+                Лира Кравик / Kravik Lyre №1, 7 струн,<br />нет в наличии
               </h2>
             </li>
             <div class="hidden-photos">
