--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <img src="images/product/1/1.jpg" alt="Гусли-изображение-1" />
           </li>
           <li>
-            <h2 class="textproduct">Гусли № 1, 11 струн,<br />цена: 285 BYN</h2>
+            <h2 class="textproduct">Гусли № 1, 11 струн,<br />цена: 300 BYN</h2>
           </li>
           <div class="hidden-photos">
             <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
@@ -155,7 +155,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 2, 12 струн,<br />цена: 285 BYN</h2>
+            <h2 class="textproduct">Гусли № 2, 12 струн,<br />цена: 300 BYN</h2>
           </li>
           <div class="hidden-photos">
             <img src="images/product/2/2.jpg" alt="Гусли-изображение-2" />
@@ -170,7 +170,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 3, 12 струн,<br />цена: 300 BYN</h2>
+            <h2 class="textproduct">Гусли № 3, 12 струн,<br />цена: 320 BYN</h2>
           </li>
 
           <div class="hidden-photos">
@@ -187,7 +187,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 4, 12 струн,<br />цена: 350 BYN</h2>
+            <h2 class="textproduct">Гусли № 4, 12 струн,<br />цена: 360 BYN</h2>
           </li>
 
           <div class="hidden-photos">
@@ -203,7 +203,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 5, 12 струн,<br />цена: 300 BYN</h2>
+            <h2 class="textproduct">Гусли № 5, 12 струн,<br />цена: 320 BYN</h2>
           </li>
 
           <div class="hidden-photos">
@@ -218,7 +218,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 6, 11 струн,<br />цена: 300 BYN</h2>
+            <h2 class="textproduct">Гусли № 6, 11 струн,<br />цена: 320 BYN</h2>
           </li>
 
           <div class="hidden-photos">
@@ -235,11 +235,25 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 7, 12 струн,<br />цена: 300 BYN</h2>
+            <h2 class="textproduct">Гусли № 7, 12 струн,<br />цена: 320 BYN</h2>
           </li>
 
           <div class="hidden-photos">
             <img src="images/product/7/2.jpg" alt="Гусли-изображение-2" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/8/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h2 class="textproduct">Гусли № 8, 12 струн,<br />цена: 360 BYN</h2>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/8/2.jpg" alt="Гусли-изображение-2" />
           </div>
         </ul>
       </div>
