--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 2, 12 струн,<br />цена: 300 BYN</h2>
+            <h2 class="textproduct">Гусли № 2, 12 струн,<br />цена: 360 BYN</h2>
           </li>
           <div class="hidden-photos">
             <img src="images/product/2/2.jpg" alt="Гусли-изображение-2" />
@@ -254,6 +254,22 @@
 
           <div class="hidden-photos">
             <img src="images/product/8/2.jpg" alt="Гусли-изображение-2" />
+          </div>
+        </ul>
+
+        <ul class="images images1">
+          <li class="visible">
+            <img src="images/product/9/1.jpg" alt="Гусли-изображение-1" />
+          </li>
+
+          <li>
+            <h2 class="textproduct">Гусли № 9, 12 струн,<br />цена: 360 BYN</h2>
+          </li>
+
+          <div class="hidden-photos">
+            <img src="images/product/9/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/9/3.jpg" alt="Гусли-изображение-3" />
+            <img src="images/product/9/4.jpg" alt="Гусли-изображение-4" />
           </div>
         </ul>
       </div>
