--- a/index.html
+++ b/index.html
@@ -235,11 +235,13 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 7, 12 струн,<br />цена: 320 BYN</h2>
+            <h2 class="textproduct">Гусли № 7, 12 струн,<br />цена: 360 BYN</h2>
           </li>
 
           <div class="hidden-photos">
             <img src="images/product/7/2.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/7/3.jpg" alt="Гусли-изображение-2" />
+            <img src="images/product/7/4.jpg" alt="Гусли-изображение-2" />
           </div>
         </ul>
 
