--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <main>
       <p class="upcontent">
-        egusli.by здесь можно ознакомиться с инструментами, какие гусли выбрать
+       Где купить гусли? egusli.by здесь можно ознакомиться с инструментами, какие гусли выбрать
         себе.
       </p>
 
@@ -107,12 +107,12 @@
       </a>
 
       <p class="content">
-        Приветствую! Меня зовут Евгений и я занимаюсь изготовлением старинного
+        Приветствую! Ищите где купить гусли? Меня зовут Евгений и я занимаюсь изготовлением старинного
         щипкового музыкального инструмента-
         <a href="./pages/info/info.html">Гусли</a>, в Беларуси. Это инструмент,
         позволяющий извлекать совершенно гармоничные сочетания звуков с
         возможностью заглянуть в далекое прошлое. Мои гусли: это изделия ручной
-        работы, естественный внешний вид, яркое природное звучание.Для
+        работы, естественный внешний вид, яркое природное звучание. Для
         приобретения инструмента и вопросам свяжитесь со мной по данным
         <a href="#contactsjump">контактам</a>. Возможна отправка в другие
         страны. Условия доставки и оплаты согласовываются индивидуально.Также
