--- a/index.html
+++ b/index.html
@@ -308,11 +308,23 @@
           <h3>
             <a class="center" href="https://t.me/evgeni652" target="_blank">
               <img
-                class="contacts-icon-img"
+                class="vk-icon-img"
                 src="images/telegram.png"
                 alt="telegram"
               />
               &nbsp; Telegram
+            </a>
+          </h3>
+
+
+          <h3>
+            <a class="center" href="https://vk.com/egusli" target="_blank">
+              <img
+                class="vk-icon-img"
+                src="images/vk.png"
+                alt="vk.com"
+              />
+              &nbsp; ВКонтакте
             </a>
           </h3>
 
